--- a/src/pages/SelectLevelPage/SelectLevelPage.module.css
+++ b/src/pages/SelectLevelPage/SelectLevelPage.module.css
@@ -59,6 +59,40 @@
   text-decoration: none;
 }
 
+.easy{
+  color:blueviolet;
+  font-family:monospace;
+  font-size: 24px;
+  
+}
+
+.easy:hover{
+  color:black;
+  text-decoration: underline;
+}
+
+.check{
+  display: none;
+}
+
+
+.customCheckbox {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #8304b9;
+  cursor: pointer;
+  border-radius:8px;
+  margin-left: 65px;
+  margin-top: 15px;
+}
+
+.check:checked + .customCheckbox{
+  background-color: #8304b9;
+  border-color: #8304b9;
+}
+
+
 .levelLink:visited {
   color: #0080c1;
 }
