--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -70,3 +70,11 @@
 
   margin-bottom: -12px;
 }
+
+.count {
+  color: rgb(255, 255, 255);
+  font-size: 24px;
+  margin-top: 15px;
+  font-family: StratosSkyeng;
+}
+
