--- a/src/components/EndGameModal/EndGameModal.module.css
+++ b/src/components/EndGameModal/EndGameModal.module.css
@@ -23,7 +23,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 48px;
-
+  text-align: center;
   margin-bottom: 28px;
 }
 
@@ -48,4 +48,21 @@
   line-height: 72px;
 
   margin-bottom: 40px;
+}
+
+.linkLeader {
+  color: rgb(66, 72, 251);
+  font-family: StratosSkyeng;
+  margin-bottom: 60px;
+  margin-top: 10px;
+  font-weight: 100;
+}
+
+.inputName {
+  width: 300px;
+	font-size: 13px;
+	padding: 6px 0 4px 10px;
+	border: 1px solid #cecece;
+	background: #F6F6f6;
+	border-radius: 8px;
 }
