--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,6 +1,6 @@
 .button {
   width: 246px;
-  height: 48px;
+  height: 62px;
 
   border-radius: 12px;
   background: #7ac100;
@@ -17,8 +17,9 @@
   line-height: 32px; /* 133.333% */
 
   border: none;
-
   cursor: pointer;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .button:hover {
