--- a/src/components/EndGameModal/EndGameModal.module.css
+++ b/src/components/EndGameModal/EndGameModal.module.css
@@ -1,6 +1,6 @@
 .modal {
   width: 480px;
-  height: 459px;
+  height: 634px;
   border-radius: 12px;
   background: #c2f5ff;
   display: flex;
@@ -16,6 +16,10 @@
 }
 
 .title {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 260px;
   color: #004980;
   font-variant-numeric: lining-nums proportional-nums;
   font-family: StratosSkyeng;
@@ -23,8 +27,62 @@
   font-style: normal;
   font-weight: 400;
   line-height: 48px;
-  text-align: center;
+
   margin-bottom: 28px;
+}
+.title_leaderboard {
+  color: #004980;
+  text-align: center;
+  font-variant-numeric: lining-nums proportional-nums;
+  font-family: StratosSkyeng;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 48px;
+}
+.input_user {
+  width: 246px;
+  height: 45px;
+  top: 334px;
+  left: 374px;
+  border-radius: 10px;
+  font-family: StratosSkyeng;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0em;
+  text-align: center;
+  border: none;
+  color: #010101;
+}
+
+.buttonmode_addscore {
+  margin-top: 8px;
+  margin-bottom: 8px;
+
+  width: 140px;
+  height: 30px;
+
+  border-radius: 12px;
+  background: #7ac100;
+
+  color: #fff;
+  text-align: center;
+  font-variant-numeric: lining-nums proportional-nums;
+
+  font-family: StratosSkyeng;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+
+  border: none;
+
+  cursor: pointer;
+}
+
+.button_addscore:hover {
+  background: #7ac100cc;
 }
 
 .description {
@@ -46,23 +104,4 @@
   font-style: normal;
   font-weight: 400;
   line-height: 72px;
-
-  margin-bottom: 40px;
-}
-
-.linkLeader {
-  color: rgb(66, 72, 251);
-  font-family: StratosSkyeng;
-  margin-bottom: 60px;
-  margin-top: 10px;
-  font-weight: 100;
-}
-
-.inputName {
-  width: 300px;
-	font-size: 13px;
-	padding: 6px 0 4px 10px;
-	border: 1px solid #cecece;
-	background: #F6F6f6;
-	border-radius: 8px;
 }
