--- a/src/pages/SelectLevelPage/SelectLevelPage.module.css
+++ b/src/pages/SelectLevelPage/SelectLevelPage.module.css
@@ -38,17 +38,16 @@
 
 .level {
   display: flex;
-  width: 97px;
-  height: 98px;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  width: 97px;
+  height: 98px;
   flex-shrink: 0;
 
   border-radius: 12px;
   background: #fff;
-}
 
-.levelLink {
   color: #0080c1;
   text-align: center;
   font-family: StratosSkyeng;
@@ -57,41 +56,87 @@
   font-weight: 400;
   line-height: 72px;
   text-decoration: none;
+  position: relative;
+  cursor: pointer;
 }
 
-.easy{
-  color:blueviolet;
-  font-family:monospace;
-  font-size: 24px;
-  
+.levelText {
+  position: relative;
+  z-index: 1;
+  padding: 12px 30px 12px 30px;
 }
 
-.easy:hover{
-  color:black;
-  text-decoration: underline;
+.checked {
+  /* color: #004980; */
+  color: #7ac100;
 }
 
-.check{
+input[type="radio"] {
   display: none;
 }
 
 
-.customCheckbox {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  border: 1px solid #8304b9;
+.level:hover {
+  background: #0080c1;
+  color: #fff;
+}
+
+.mode {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+
+.linkBoard {
+  padding-top: 20px;
+  color: #004980;
+  text-decoration: underline;
+  font-weight: 400;
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+}
+
+.linkBoard:hover {
+color:#000;
+}
+
+button {
+  width: 246px;
+  height: 48px;
+
+  border-radius: 12px;
+  background: gray;
+
+  color: #fff;
+  text-align: center;
+  font-variant-numeric: lining-nums proportional-nums;
+
+  font-family: StratosSkyeng;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /* 133.333% */
+
+  border: none;
+
   cursor: pointer;
-  border-radius:8px;
-  margin-left: 65px;
-  margin-top: 15px;
 }
 
-.check:checked + .customCheckbox{
-  background-color: #8304b9;
-  border-color: #8304b9;
+.span {
+  font-family: StratosSkyeng;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  padding-left: 10px;
 }
 
-.levelLink:visited {
-  color: #0080c1;
+.leaderboard {
+  font-family: StratosSkyeng;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  padding-left: 10px;
+  color: #004980;
 }
